kubernetes/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-k8s-app
  labels:
    app: springboot-k8s-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-k8s-app
  template:
    metadata:
      labels:
        app: springboot-k8s-app
    spec:
      containers:
        - name: springboot-k8s-app
          imagePullPolicy: IfNotPresent
          image: tejnal/kubernetes:springboot-k8s-app
