kubernetes/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-k8s-app
spec:
  type: ClusterIP
  selector:
    app: springboot-k8s-app
  ports:
    - port: 80
      targetPort: 8080
